# goit_homework_M2T10_V3

./: README.md  pyproject.toml
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: models.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: stile.css
hw_project/quotes/templates/quotes/: base.html  index.html
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: login.html  logout.html
