[tool.poetry]
name = "goit-homework-m2t10-v3"
version = "0.1.0"
description = ""
authors = ["Roman-K26 <romankuspys777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
